Fixing the contact form on safari and sizing it correctly on mobile

--- a/style.scss
+++ b/style.scss
@@ -185,6 +185,9 @@ p.clear {
 
 #contact {
     text-align: center;
+    top: 50%;
+    padding-left: 20px;
+    padding-right: 20px;
 
     input, textarea {
         width: 100%;
@@ -204,10 +207,9 @@ p.clear {
     }
 
     form {
-        width: 700px;
+        max-width: 700px;
         margin: auto;
         position: relative;
-        top: 50%;
         transform: translateY(-50%);
     }
 
